# sfml-sierpinski

./: CMakeLists.txt  README.md
src/: main.cpp
